[gd_scene load_steps=10 format=3 uid="uid://b3bostcslstem"]

[ext_resource type="Script" uid="uid://dtvnb0xatk0my" path="res://addons/gut/gui/GutBottomPanel.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://0yunjxtaa8iw" path="res://addons/gut/gui/RunAtCursor.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://cr6tvdv0ve6cv" path="res://addons/gut/gui/play.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bvo0uao7deu0q" path="res://addons/gut/icon.png" id="4_xv2r3"]
[ext_resource type="PackedScene" uid="uid://4gyyn12um08h" path="res://addons/gut/gui/RunResults.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://bqmo4dj64c7yl" path="res://addons/gut/gui/OutputText.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://dj5ve0bq7xa5j" path="res://addons/gut/gui/ShortcutDialog.tscn" id="7_srqj5"]
[ext_resource type="PackedScene" uid="uid://ckv5eh8xyrwbk" path="res://addons/gut/gui/ShellOutOptions.tscn" id="7_xv2r3"]

[sub_resource type="Shortcut" id="9"]

[node name="GutBottomPanel" type="Control"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 3
anchor_left = -0.0025866
anchor_top = -0.00176575
anchor_right = 0.997413
anchor_bottom = 0.998234
offset_left = 2.64868
offset_top = 1.05945
offset_right = 2.64862
offset_bottom = 1.05945
script = ExtResource("1")

[node name="layout" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ControlBar" type="HBoxContainer" parent="layout"]
layout_mode = 2

[node name="RunAll" type="Button" parent="layout/ControlBar"]
layout_mode = 2
size_flags_vertical = 11
shortcut = SubResource("9")
text = "Run All"
icon = ExtResource("4")

[node name="Sep3" type="ColorRect" parent="layout/ControlBar"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2

[node name="RunAtCursor" parent="layout/ControlBar" instance=ExtResource("3")]
custom_minimum_size = Vector2(648, 0)
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="layout/ControlBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MakeFloating" type="Button" parent="layout/ControlBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Move the GUT panel to a window."
icon = ExtResource("4_xv2r3")
flat = true

[node name="ControlBar2" type="HBoxContainer" parent="layout"]
layout_mode = 2

[node name="Sep2" type="ColorRect" parent="layout/ControlBar2"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="StatusIndicator" type="Control" parent="layout/ControlBar2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="Passing" type="HBoxContainer" parent="layout/ControlBar2"]
visible = false
layout_mode = 2

[node name="Sep" type="ColorRect" parent="layout/ControlBar2/Passing"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2

[node name="label" type="Label" parent="layout/ControlBar2/Passing"]
layout_mode = 2
text = "Pass"

[node name="passing_value" type="Label" parent="layout/ControlBar2/Passing"]
unique_name_in_owner = true
layout_mode = 2
text = "---"

[node name="Failing" type="HBoxContainer" parent="layout/ControlBar2"]
visible = false
layout_mode = 2

[node name="Sep" type="ColorRect" parent="layout/ControlBar2/Failing"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2

[node name="label" type="Label" parent="layout/ControlBar2/Failing"]
layout_mode = 2
text = "Fail"

[node name="failing_value" type="Label" parent="layout/ControlBar2/Failing"]
unique_name_in_owner = true
layout_mode = 2
text = "---"

[node name="Pending" type="HBoxContainer" parent="layout/ControlBar2"]
visible = false
layout_mode = 2

[node name="Sep" type="ColorRect" parent="layout/ControlBar2/Pending"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2

[node name="label" type="Label" parent="layout/ControlBar2/Pending"]
layout_mode = 2
text = "Risky"

[node name="pending_value" type="Label" parent="layout/ControlBar2/Pending"]
unique_name_in_owner = true
layout_mode = 2
text = "---"

[node name="Orphans" type="HBoxContainer" parent="layout/ControlBar2"]
visible = false
layout_mode = 2

[node name="Sep" type="ColorRect" parent="layout/ControlBar2/Orphans"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2

[node name="label" type="Label" parent="layout/ControlBar2/Orphans"]
layout_mode = 2
text = "Orphans"

[node name="orphans_value" type="Label" parent="layout/ControlBar2/Orphans"]
unique_name_in_owner = true
layout_mode = 2
text = "---"

[node name="Errors" type="HBoxContainer" parent="layout/ControlBar2"]
visible = false
layout_mode = 2

[node name="Sep" type="ColorRect" parent="layout/ControlBar2/Errors"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2

[node name="label" type="Label" parent="layout/ControlBar2/Errors"]
layout_mode = 2
text = "Errors"

[node name="errors_value" type="Label" parent="layout/ControlBar2/Errors"]
unique_name_in_owner = true
layout_mode = 2
text = "---"

[node name="Warnings" type="HBoxContainer" parent="layout/ControlBar2"]
visible = false
layout_mode = 2

[node name="Sep" type="ColorRect" parent="layout/ControlBar2/Warnings"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2

[node name="label" type="Label" parent="layout/ControlBar2/Warnings"]
layout_mode = 2
text = "Warnings"

[node name="warnings_value" type="Label" parent="layout/ControlBar2/Warnings"]
unique_name_in_owner = true
layout_mode = 2
text = "---"

[node name="CenterContainer" type="CenterContainer" parent="layout/ControlBar2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExtraButtons" type="HBoxContainer" parent="layout/ControlBar2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sep1" type="ColorRect" parent="layout/ControlBar2/ExtraButtons"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2

[node name="RunMode" type="Button" parent="layout/ControlBar2/ExtraButtons"]
layout_mode = 2
tooltip_text = "Run Mode.  Run tests through the editor or externally in a different process."
text = "ExN"
icon = ExtResource("4_xv2r3")

[node name="Sep2" type="ColorRect" parent="layout/ControlBar2/ExtraButtons"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2

[node name="RunResultsBtn" type="Button" parent="layout/ControlBar2/ExtraButtons"]
layout_mode = 2
tooltip_text = "Show/Hide Result Tree"
toggle_mode = true
button_pressed = true
icon = ExtResource("4_xv2r3")

[node name="OutputBtn" type="Button" parent="layout/ControlBar2/ExtraButtons"]
layout_mode = 2
tooltip_text = "Show/Hide Text Output"
toggle_mode = true
button_pressed = true
icon = ExtResource("4_xv2r3")

[node name="Settings" type="Button" parent="layout/ControlBar2/ExtraButtons"]
layout_mode = 2
tooltip_text = "GUT Settings"
toggle_mode = true
button_pressed = true
icon = ExtResource("4_xv2r3")

[node name="Sep3" type="ColorRect" parent="layout/ControlBar2/ExtraButtons"]
custom_minimum_size = Vector2(1, 2.08165e-12)
layout_mode = 2

[node name="Shortcuts" type="Button" parent="layout/ControlBar2/ExtraButtons"]
layout_mode = 2
size_flags_vertical = 11
tooltip_text = "GUT Shortcuts"
icon = ExtResource("4_xv2r3")

[node name="About" type="Button" parent="layout/ControlBar2/ExtraButtons"]
layout_mode = 2
tooltip_text = "About"
text = "A"

[node name="RSplit" type="HSplitContainer" parent="layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CResults" type="VBoxContainer" parent="layout/RSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitResults" type="HSplitContainer" parent="layout/RSplit/CResults"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RunResults" parent="layout/RSplit/CResults/HSplitResults" instance=ExtResource("5")]
unique_name_in_owner = true
custom_minimum_size = Vector2(255, 255)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OutputText" parent="layout/RSplit/CResults/HSplitResults" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2

[node name="VSplitResults" type="VSplitContainer" parent="layout/RSplit/CResults"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="sc" type="ScrollContainer" parent="layout/RSplit"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 3

[node name="Settings" type="VBoxContainer" parent="layout/RSplit/sc"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShortcutDialog" parent="." instance=ExtResource("7_srqj5")]
visible = false

[node name="ShellOutOptions" parent="." instance=ExtResource("7_xv2r3")]
size = Vector2i(1300, 1336)
visible = false

[connection signal="pressed" from="layout/ControlBar/RunAll" to="." method="_on_RunAll_pressed"]
[connection signal="run_tests" from="layout/ControlBar/RunAtCursor" to="." method="_on_RunAtCursor_run_tests"]
[connection signal="pressed" from="layout/ControlBar/MakeFloating" to="." method="_on_to_window_pressed"]
[connection signal="draw" from="layout/ControlBar2/StatusIndicator" to="." method="_on_Light_draw"]
[connection signal="pressed" from="layout/ControlBar2/ExtraButtons/RunMode" to="." method="_on_run_mode_pressed"]
[connection signal="pressed" from="layout/ControlBar2/ExtraButtons/RunResultsBtn" to="." method="_on_RunResultsBtn_pressed"]
[connection signal="pressed" from="layout/ControlBar2/ExtraButtons/OutputBtn" to="." method="_on_OutputBtn_pressed"]
[connection signal="pressed" from="layout/ControlBar2/ExtraButtons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="layout/ControlBar2/ExtraButtons/Shortcuts" to="." method="_on_Shortcuts_pressed"]
[connection signal="pressed" from="layout/ControlBar2/ExtraButtons/About" to="." method="_on_about_pressed"]
[connection signal="confirmed" from="ShortcutDialog" to="." method="_on_sortcut_dialog_confirmed"]
[connection signal="confirmed" from="ShellOutOptions" to="." method="_on_shell_out_options_confirmed"]
